{
  "version": 4,
  "terraform_version": "1.1.9",
  "serial": 57,
  "lineage": "2da24833-a301-0f4c-3c47-8ee5c1e81710",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "terraform_demo_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04a4a08af8f296caa",
            "associate_with_private_ip": "10.0.0.42",
            "association_id": "eipassoc-08177dc3f541f1a88",
            "domain": "vpc",
            "id": "eipalloc-04a4a08af8f296caa",
            "instance": "i-055a65bfd59b7f797",
            "network_border_group": "eu-central-1",
            "network_interface": "eni-098583c1f57343e0e",
            "private_dns": "ip-10-0-0-42.eu-central-1.compute.internal",
            "private_ip": "10.0.0.42",
            "public_dns": "ec2-3-72-145-105.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.72.145.105",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.terraform_demo_ig",
            "aws_network_interface.terraform_demo_ni",
            "aws_security_group.terraform_demo_sg",
            "aws_subnet.terraform_demo_subnet",
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "terraform_demo_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-015c25ad8763b2f11",
            "arn": "arn:aws:ec2:eu-central-1:381315795627:instance/i-055a65bfd59b7f797",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-055a65bfd59b7f797",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "terraform_demo_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_card_index": 0,
                "network_interface_id": "eni-098583c1f57343e0e"
              }
            ],
            "primary_network_interface_id": "eni-098583c1f57343e0e",
            "private_dns": "ip-10-0-0-42.eu-central-1.compute.internal",
            "private_ip": "10.0.0.42",
            "public_ip": "3.72.145.105",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0282d2aaee2cd2966",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32b8a2ffb02ccc4",
            "tags": {
              "Name": "terraform_demo_instance"
            },
            "tags_all": {
              "Name": "terraform_demo_instance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a5dc9122251f57e"
            ]
          },
          "dependencies": [
            "aws_network_interface.terraform_demo_ni",
            "aws_security_group.terraform_demo_sg",
            "aws_subnet.terraform_demo_subnet",
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "terraform_demo_ig",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381315795627:internet-gateway/igw-05d3c4788a163246c",
            "id": "igw-05d3c4788a163246c",
            "owner_id": "381315795627",
            "tags": {
              "Name": "terraform_demo_ig"
            },
            "tags_all": {
              "Name": "terraform_demo_ig"
            },
            "vpc_id": "vpc-03383374d8a28532d"
          },
          "dependencies": [
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "terraform_demo_ni",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381315795627:network-interface/eni-098583c1f57343e0e",
            "attachment": [
              {
                "attachment_id": "eni-attach-0a024122aeead2682",
                "device_index": 0,
                "instance": "i-055a65bfd59b7f797"
              }
            ],
            "id": "eni-098583c1f57343e0e",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "02:35:9f:eb:7a:ba",
            "owner_id": "381315795627",
            "private_ip": "10.0.0.42",
            "private_ip_list": [
              "10.0.0.42"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.0.42"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-04a5dc9122251f57e"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f32b8a2ffb02ccc4"
          },
          "dependencies": [
            "aws_security_group.terraform_demo_sg",
            "aws_subnet.terraform_demo_subnet",
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "terraform_demo_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381315795627:route-table/rtb-004c2af15952d03cb",
            "id": "rtb-004c2af15952d03cb",
            "owner_id": "381315795627",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-05d3c4788a163246c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "terraform_demo_rt"
            },
            "tags_all": {
              "Name": "terraform_demo_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-03383374d8a28532d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.terraform_demo_ig",
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "terraform_demo_subnet_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cac70819aa640258",
            "route_table_id": "rtb-004c2af15952d03cb",
            "subnet_id": "subnet-0f32b8a2ffb02ccc4"
          },
          "dependencies": [
            "aws_internet_gateway.terraform_demo_ig",
            "aws_route_table.terraform_demo_rt",
            "aws_subnet.terraform_demo_subnet",
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "terraform_demo_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381315795627:security-group/sg-04a5dc9122251f57e",
            "description": "Allow web inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a5dc9122251f57e",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "http",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "https",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web_traffic",
            "name_prefix": "",
            "owner_id": "381315795627",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "terraform_demo_sg"
            },
            "tags_all": {
              "Name": "terraform_demo_sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-03383374d8a28532d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "terraform_demo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381315795627:subnet/subnet-0f32b8a2ffb02ccc4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f32b8a2ffb02ccc4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "381315795627",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "terraform_demo_subnet"
            },
            "tags_all": {
              "Name": "terraform_demo_subnet"
            },
            "vpc_id": "vpc-03383374d8a28532d"
          },
          "dependencies": [
            "aws_vpc.terraform_demo_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "terraform_demo_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:381315795627:vpc/vpc-03383374d8a28532d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c17c3fc6715860dc",
            "default_route_table_id": "rtb-0ab4012c04bcd4827",
            "default_security_group_id": "sg-02d2d1a39d70b3967",
            "dhcp_options_id": "dopt-44be0e2e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-03383374d8a28532d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ab4012c04bcd4827",
            "owner_id": "381315795627",
            "tags": {
              "Name": "terraform_demo_vpc"
            },
            "tags_all": {
              "Name": "terraform_demo_vpc"
            }
          }
        }
      ]
    }
  ]
}